store/src/styles/sections/select-delivery.scss
/* ... */
.hern-select-delivery__message {
   background: rgba(51, 51, 51, 0.1);
   border-radius: 6.8px;
   text-align: center;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
   line-height: 20px;
   color: #333333;
   padding: 0.75rem;
}

.hern-delivery {
   &__main {
      max-width: 1150px;
      padding: 1rem;
      margin: 0 auto;
   }
   &__card {
      display: flex;
      margin-bottom: 2rem;
      &:last-child {
         margin-bottom: 0;
      }
      &__counter {
         margin-top: 1.5rem;
         width: 2.75rem;
         height: 2.75rem;
         border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
         background: #ffffff;
         border: 0.5px solid rgba(51, 51, 51, 0.2);
         margin-right: -8px;
         z-index: 99;
         > span {
            font-family: 'Inter', sans-serif;
            font-style: normal;
            font-weight: 500;
            font-size: 1.25rem;
            color: rgba(51, 51, 51, 0.4);
         }
         &--active {
            background-color: var(--hern-accent);

            > span {
               color: #ffffff;
            }
         }
      }
      &__content__wrapper {
         background: #ffffff;
         box-shadow: 0px 0px 29px rgba(0, 0, 0, 0.08);
         border-radius: 4px;
         width: 100%;
         padding: 2rem 3rem;
      }
      &__content {
         display: block;
      }
      &__content__header {
         font-family: 'Lato';
         font-style: normal;
         font-weight: 600;
         font-size: 1.75rem;
         color: rgba(51, 51, 51, 0.4);
         display: flex;
         align-items: center;
         gap: 0.5rem;
         margin-bottom: 1.5rem;
         &--active {
            color: #333333;
         }
         &__add-address-btn {
            margin-left: auto;
            cursor: pointer;
            &:hover {
               color: var(--hern-accent);
            }
         }
      }
   }
   &__continue-btn {
      background: var(--hern-accent);
      border-radius: 32px;
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 1.5rem auto;
      font-family: 'Lato';
      font-style: normal;
      font-weight: 500;
      font-size: 20px;
      line-height: 24px;
      color: rgba(51, 51, 51, 0.6);
      cursor: pointer;
      transition: all 0.2s ease-in-out;
      padding: 0.75rem 3.5rem;
      color: #ffffff;
      &:hover {
         opacity: 0.8;
      }
      &--disabled {
         background: rgba(17, 130, 59, 0.2);
         cursor: not-allowed;

         &:hover {
            opacity: 0.8;
         }
      }
   }
}
/* ... */

